--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minifs",
   "version": "1.0.0",
   "description": "An in-memory filesystem-like data structure.",
+  "author": "LuisAFK",
   "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
