--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minifs",
+  "name": "@luisafk/minifs",
   "version": "1.0.0",
   "description": "An in-memory filesystem-like data structure.",
   "author": "LuisAFK",
