--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --minify && tsc --emitDeclarationOnly --declaration --outDir dist src/index.ts",
-    "changelog": "auto-changelog"
+    "changelog": "auto-changelog",
+    "prepublishOnly": "bun run build && bun run changelog"
   },
   "files": [
     "dist"
