--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --minify && tsc --emitDeclarationOnly --declaration --outDir dist --target es6 src/index.ts",
-    "changelog": "auto-changelog -p",
-    "prepublishOnly": "bun run build && bun run changelog"
+    "prepublishOnly": "bun run build",
+    "version": "auto-changelog -p"
   },
   "files": [
     "dist"
