--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --minify && tsc --emitDeclarationOnly --declaration --outDir dist --target es6 src/index.ts",
     "prepublishOnly": "bun run build",
-    "version": "auto-changelog -p"
+    "version": "auto-changelog"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "auto-changelog": {
+    "commitLimit": false,
+    "package": true
+  }
 }
