--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "auto-changelog": {
     "commitLimit": false,
+    "ignoreCommitPattern": "^[Cc]hangelog$|\\[nc\\]",
     "unreleased": true
   }
 }
