--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "devDependencies": {
+    "@types/bun": "^1.1.6",
     "auto-changelog": "^2.4.0",
-    "bun-types": "latest",
     "prettier": "^3.1.1"
   },
   "peerDependencies": {
