docs: don't include style, docs and ci commits in changelog

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "auto-changelog": {
     "commitLimit": false,
-    "ignoreCommitPattern": "^[Cc]hangelog$|\\[nc\\]",
+    "ignoreCommitPattern": "^[Cc]hangelog$|\\[nc\\]|^(style|docs|ci)(\\(.+\\))?: ",
     "unreleased": true
   }
 }
