--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "3.0.0",
   "description": "An in-memory filesystem-like data structure.",
   "author": "LuisAFK",
-  "repository": "https://github.com/lafkpages/minifs.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lafkpages/minifs.git"
+  },
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
